# tgd

./: .gitignore  404.html  Introduction.html  README.md  astrogram-features.html  available-libraries.html  built-in-plugins.html  changelog.html  commands-and-interceptors.html  common-classes.html  current  file-utilities.html  first-plugin.html  hashmap.json  index.html  links.html  packaging-and-release.html  plugin-class.html  plugin-settings.html  runtime-api.html  safe-mode.html  setup.html  system-info.html  troubleshooting.html  window-and-session.html
.github/scripts/: download-prebuilt-win-deps.ps1
.github/workflows/: build-desktop-force.yml  build-desktop.yml  build-plugin-accent-color.yml  build-plugin-ai-chat.yml  build-plugin-ayu-safe.yml  build-plugin-blur-telegram.yml  build-plugin-font-tuner.yml  build-plugin-reusable.yml  build-plugin-show-logs.yml  build-plugin-transparent-telegram.yml  build-plugins.yml  docs-site.yml  quick-plugin-checks.yml
PluginCatalog/: CMakeLists.txt  README.md
PluginCatalog/accent_color/1.0/: accent_color.cpp
PluginCatalog/accent_color/1.1/: accent_color.tgd
PluginCatalog/ai_chat/1.1/: ai_chat.cpp
PluginCatalog/ai_chat/1.3/: ai_chat.cpp  ai_chat.tgd
PluginCatalog/ayu_safe/0.1/: ayu_safe.cpp
PluginCatalog/ayu_safe/0.3/: ayu_safe.cpp
PluginCatalog/blur_telegram/1.0/: blur_telegram.cpp
PluginCatalog/blur_telegram/1.1/: blur_telegram.tgd
PluginCatalog/command_shrug/1.0/: command_shrug.cpp  command_shrug.tgd
PluginCatalog/command_shrug/1.1/: command_shrug.cpp  command_shrug.tgd
PluginCatalog/font_tuner/1.1/: font_tuner.tgd
PluginCatalog/font_tuner/1.2/: font_tuner.cpp
PluginCatalog/hello_menu/1.0/: hello_menu.cpp  hello_menu.tgd
PluginCatalog/hello_menu/1.1/: hello_menu.cpp  hello_menu.tgd
PluginCatalog/message_observer/1.0/: message_observer.cpp  message_observer.tgd
PluginCatalog/message_observer/1.1/: message_observer.cpp  message_observer.tgd
PluginCatalog/panel_demo/1.0/: panel_demo.cpp  panel_demo.tgd
PluginCatalog/panel_demo/1.1/: panel_demo.cpp
PluginCatalog/runtime_info/1.0/: runtime_info.tgd
PluginCatalog/show_logs/1.3/: show_logs.cpp
PluginCatalog/transparent_telegram/1.0/: transparent_telegram.cpp  transparent_telegram.tgd
PluginCatalog/transparent_telegram/1.1/: transparent_telegram.cpp
PluginCatalog/transparent_telegram/1.2/: transparent_telegram.cpp
PluginCatalog/transparent_telegram/1.3/: transparent_telegram.cpp
PluginCatalog/transparent_telegram/1.4/: transparent_telegram.cpp
PluginCatalog/transparent_telegram/1.5/: transparent_telegram.cpp
PluginCatalog/transparent_telegram/2.0/: transparent_telegram.cpp
PluginCatalog/transparent_telegram/2.1/: transparent_telegram.cpp
PluginCatalog/transparent_telegram/2.2/: transparent_telegram.cpp
PluginCatalog/transparent_telegram/2.5/: transparent_telegram.tgd
PluginCatalog/transparent_telegram/2.9/: transparent_telegram.cpp
Telegram/: CMakeLists.txt  Telegram.plist
Telegram/Plugins/Examples/: README.md  accent_color.cpp  ai_chat.cpp  ayu_safe.cpp  blur_telegram.cpp  command_shrug.cpp  font_tuner.cpp  hello_menu.cpp  message_observer.cpp  panel_demo.cpp  runtime_info.cpp  show_logs.cpp  transparent_telegram.cpp
Telegram/Resources/langs/: lang.strings
Telegram/Resources/winrc/: Telegram.rc  Updater.rc
Telegram/SourceFiles/: apiwrap.cpp  apiwrap.h  config.h  logs.cpp  logs.h  mainwidget.cpp  mainwidget.h  mainwindow.cpp  tray.cpp
Telegram/SourceFiles/_other/: packer.cpp  startup_task_win.cpp  updater_linux.cpp  updater_win.cpp
Telegram/SourceFiles/api/: api_authorizations.cpp  api_chat_invite.cpp  api_editing.cpp  api_peer_search.cpp  api_send_progress.cpp  api_sending.cpp  api_sending.h  api_transcribes.cpp  api_transcribes.h  api_updates.cpp  api_views.cpp  api_who_reacted.cpp
Telegram/cmake/: td_ui.cmake
assets/: Introduction.md.CdXEsLvG.js  Introduction.md.CdXEsLvG.lean.js  app.DpdrtXU5.js  astrogram-features.md.OmlFuYUv.js  astrogram-features.md.OmlFuYUv.lean.js  available-libraries.md.CVgq_iDT.js  available-libraries.md.CVgq_iDT.lean.js  built-in-plugins.md.BghmOrv_.js  built-in-plugins.md.BghmOrv_.lean.js  changelog.md.B3ZJYgwu.js  changelog.md.B3ZJYgwu.lean.js  commands-and-interceptors.md.CbM_Xevy.js  commands-and-interceptors.md.CbM_Xevy.lean.js  common-classes.md.BBvLvoyo.js  common-classes.md.BBvLvoyo.lean.js  file-utilities.md.SYnWu6TQ.js  file-utilities.md.SYnWu6TQ.lean.js  first-plugin.md.dq8AbZxS.js  first-plugin.md.dq8AbZxS.lean.js  index.md.kfczKttE.js  index.md.kfczKttE.lean.js  links.md.BGy4PfLd.js  links.md.BGy4PfLd.lean.js  packaging-and-release.md.CmSpU1HO.js  packaging-and-release.md.CmSpU1HO.lean.js  plugin-class.md.ZIDlPj7F.js  plugin-class.md.ZIDlPj7F.lean.js  plugin-settings.md.DZmkDDou.js  plugin-settings.md.DZmkDDou.lean.js  runtime-api.md.B1OQCHqN.js  runtime-api.md.B1OQCHqN.lean.js  safe-mode.md.C6Kf7BP1.js  safe-mode.md.C6Kf7BP1.lean.js  setup.md.DfKBuuyY.js  setup.md.DfKBuuyY.lean.js  style.Dzhi9pSq.css  system-info.md.hL0wRDyg.js  system-info.md.hL0wRDyg.lean.js  troubleshooting.md.XrbFkTy9.js  troubleshooting.md.XrbFkTy9.lean.js  (+2 more)
assets/chunks/: theme.GFTJqx45.js
lib/xdg/: org.telegram.desktop.desktop  org.telegram.desktop.metainfo.xml
site/: package.json
site/docs/: Introduction.md  astrogram-features.md  available-libraries.md  built-in-plugins.md  changelog.md  commands-and-interceptors.md  common-classes.md  file-utilities.md  first-plugin.md  index.md  links.md  packaging-and-release.md  plugin-class.md  plugin-settings.md  runtime-api.md  safe-mode.md  setup.md  system-info.md  troubleshooting.md  window-and-session.md
site/docs/public/: CNAME
site/landing/: app.js  index.html  styles.css
tools/: plugin_sanity_check.py  runtime_api_windows.bat  watch_astrogram_release.py
tools/astrogram_server/: README.md  __init__.py  bot.py  cli.py  http_api.py  storage.py  test_astrogram_server.py
tools/subscriber_badge_server/: README.md  bot.py  manage_badge.py  peer_ids.py  requirements.txt  server.py  store.py
tools/trusted_plugins_sync/: README.md  bot.py
(+157 files in other folders)
